final version missing curve gauge

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./assets/background.png');
+  background-position: center; 
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
